Fix stories page on iphone

--- a/style.css
+++ b/style.css
@@ -972,7 +972,7 @@ a{
     }
 
     .stories .author{
-        font-size: 40%;
+        font-size: 35%;
     }
 }
 
